Attach cookies while requesting for suggestions.

By default SimpleURLLoader does not attach cookies while sending
request, but for contextual suggestion service, the auth cookies are
required, otherwise it responses empty result.

Bug: 904742
Change-Id: I6d061c859cda9804fe7372634aae5c5d46916ea1
Reviewed-on: https://chromium-review.googlesource.com/c/1333017
Commit-Queue: Pengcheng Xu <pengcheng@google.com>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611118}
Former-commit-id: ec2fc8ad1a2b9075fa315b46a3af834174981676